Fixed the mising.html
Also added some other stuff im not gonna bother listing

--- a/HowTo.html
+++ b/HowTo.html
@@ -54,18 +54,18 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="Main">Main</a>
+						<a class="nav-link" href="Index.html">Main</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="SignUp">Sign Up</a>
+						<a class="nav-link" href="SignUp.html">Sign Up</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="HowTo">How To Apply</a>
+						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
 				</ul>
 			</div>
-		</nav> 
-		
+		</nav>
+
 		<div id="formm" class="container-fluid">
 			<div class="row">
 				<div class="col-lg-2" autocomplete="off">
@@ -100,6 +100,6 @@
 				</div>
 			</div>
 		</div>
-		
+
 	</body>
 </html>
