--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</script>
 	</head>
 	<body onload="setImgH()" id="bodyy">
-	
+
 		 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top" id="navv">
 			<a class="navbar-brand" href="#">
 				<img src="PSHS-CLC_logo.png" alt="Logo" style="width:40px;">
@@ -60,29 +60,29 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Main</a>
+						<a class="nav-link" href="Index.html">Main</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="SignUp">Sign Up</a>
+						<a class="nav-link" href="SignUp.html">Sign Up</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="HowTo">How To Apply</a>
+						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
 				</ul>
 			</div>
-		</nav> 
-		
+		</nav>
+
 		<div class="row" id="main_img">
 			<img id="mimg" style="width:100%;" src="PSHS-CLC_Alchemy.jpg">
 		</div>
-		
+
 		<div  id="main_text">
 			<div class="row justify-content-center">
 				<div class="col-sm-12" style="display: flex;align-items: center;justify-content: center;">
 					<h1 class="display-1 font-weight-bold text-center" style="font-size:8vw;text-shadow: 1px 1px 3px #ffff;">Sign Up for Your Club</h1>
 				</div>
 			</div>
-			
+
 			<div class="row justify-content-center">
 				<br><br>
 				<div class="col-sm-12" style="display: flex;align-items: center;justify-content: center;">
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 		</div>
-		
-		
+
+
 	</body>
 </html>
