--- a/HowTo.html
+++ b/HowTo.html
@@ -54,13 +54,13 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Main</a>
+						<a class="nav-link" href="Main.html">Main</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="signup.html">Sign Up</a>
+						<a class="nav-link" href="SignUp.html">Sign Up</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="howto.html">How To Apply</a>
+						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
 				</ul>
 			</div>
