--- a/Main.html
+++ b/Main.html
@@ -86,7 +86,7 @@
 			<div class="row justify-content-center">
 				<br><br>
 				<div class="col-sm-12" style="display: flex;align-items: center;justify-content: center;">
-					<a href="SignUp">
+					<a href="SignUp.html">
 						<button type="button" class="btn btn-primary btn-lg btn-group-lg active">
 							Go To Sign Up Page
 						</button>
