Fixing emailing format
Also added wrning in signup

--- a/SignUp.html
+++ b/SignUp.html
@@ -116,6 +116,11 @@
 					<span class="text-danger">All fields are required*</span>-->
 				 <br>
 					<div class="form-group">
+						<div class="row">
+							<div class="col-sm-9">
+								<p class="text-mute">*Submission may take a while</p>
+							</div>
+						</div>
 						<label for="Selection1">Clubs: <span class="text-danger"></span> </label>
 						<div class="row">
 							<div class="col-sm-9">
