--- a/SignUp.html
+++ b/SignUp.html
@@ -197,6 +197,11 @@
 								<button type="button" class="btn btn-default" onclick="clearSubmit()">Clear</button>
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-sm-9">
+								<p class="text-mute">Please assess my website: https://forms.gle/CovMikDmFT2nUtJe7</p>
+							</div>
+						</div>
 					</div>
 
 				</form>
