Added link to survey

--- a/HowTo.html
+++ b/HowTo.html
@@ -62,6 +62,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://forms.gle/CovMikDmFT2nUtJe7">Assessment</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
