--- a/SignUp.html
+++ b/SignUp.html
@@ -102,6 +102,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://forms.gle/CovMikDmFT2nUtJe7">Assessment</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -195,11 +198,6 @@
 							</div>
 							<div class="col-lg-1" autocomplete="off">
 								<button type="button" class="btn btn-default" onclick="clearSubmit()">Clear</button>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-9">
-								<p class="text-mute">Please assess my website: https://forms.gle/CovMikDmFT2nUtJe7</p>
 							</div>
 						</div>
 					</div>
