--- a/SignUp.html
+++ b/SignUp.html
@@ -164,6 +164,12 @@
 							<!--Make it Dynamic-->
 								<select class="form-control" id="Batch" readonly>
 									<option>
+										Batch 2020
+									</option>
+									<option>
+										Batch 2021
+									</option>
+									<option>
 										Batch 2022
 									</option>
 									<option>
