--- a/SignUp.html
+++ b/SignUp.html
@@ -147,14 +147,14 @@
 					<div class="form-group">
 						<div class="row">
 							<div class="col-sm-9">
-								<p class="text-danger">*All Data below is only for show and will not be collected</p>
+							
 							</div>
 						</div>
 						<label for="Batch">Year & Section: <span class="text-danger"></span> </label>
 						<div class="row">
 							<div class="col-sm-9">
 							<!--Make it Dynamic-->
-								<select class="form-control" id="Batch" readonly>
+								<select class="form-control" id="Batch">
 									<option>
 										Batch 2022
 									</option>
@@ -178,7 +178,7 @@
 						</div>
 						<div class="row" >
 							<div class="col-sm-9">
-								 <input type="number" id="Classno" class="form-control" placeholder="XXXX" readonly>
+								 <input type="number" id="Classno" class="form-control" placeholder="XXXX">
 							</div>
 						</div>
 					</div>
