--- a/SignUp.html
+++ b/SignUp.html
@@ -158,7 +158,7 @@
 								<p class="text-danger"></p>
 							</div>
 						</div>
-						<label for="Batch">Year & Section: <span class="text-danger"></span> </label>
+						<label for="Batch">Year & Batch: <span class="text-danger"></span> </label>
 						<div class="row">
 							<div class="col-sm-9">
 							<!--Make it Dynamic-->
@@ -188,11 +188,11 @@
 
 					<div class="form-group">
 						<div class="row">
-							<label class="control-label col-sm-2" for="Classno" autocomplete="off">Class No.</label>
+							<label class="control-label col-sm-2" for="Classno" autocomplete="off">Batch No.</label>
 						</div>
 						<div class="row" >
 							<div class="col-sm-9">
-								 <input type="number" id="Classno" class="form-control" placeholder="XXXX">
+								 <input type="number" id="Classno" class="form-control" placeholder="XX">
 							</div>
 						</div>
 					</div>
