--- a/SignUp.html
+++ b/SignUp.html
@@ -103,7 +103,7 @@
 						<a class="nav-link" href="HowTo.html">How To Apply</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://forms.gle/CovMikDmFT2nUtJe7">Assessment</a>
+						<a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSf1GPoLvYL-NhHWVKuJZCLXp2PvH_4DhkTTy2wSd1udoTwNUQ/viewform?usp=sf_link">Assessment</a>
 					</li>
 				</ul>
 			</div>
